--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -20,7 +20,7 @@
    <string>MainWindow</string>
   </property>
   <property name="windowIcon">
-   <iconset>
+   <iconset resource="resource.qrc">
     <normaloff>:/res/ico_skytech.png</normaloff>:/res/ico_skytech.png</iconset>
   </property>
   <property name="toolButtonStyle">
@@ -536,7 +536,7 @@
    <property name="minimumSize">
     <size>
      <width>100</width>
-     <height>268</height>
+     <height>274</height>
     </size>
    </property>
    <property name="font">
@@ -557,16 +557,16 @@
    <widget class="QWidget" name="dockWidgetContents">
     <layout class="QGridLayout" name="gridLayout">
      <property name="leftMargin">
-      <number>0</number>
+      <number>3</number>
      </property>
      <property name="topMargin">
-      <number>0</number>
+      <number>3</number>
      </property>
      <property name="rightMargin">
-      <number>0</number>
+      <number>3</number>
      </property>
      <property name="bottomMargin">
-      <number>0</number>
+      <number>3</number>
      </property>
      <property name="spacing">
       <number>0</number>
@@ -596,7 +596,7 @@
         <number>1</number>
        </property>
        <property name="currentIndex">
-        <number>1</number>
+        <number>0</number>
        </property>
        <property name="tabSpacing">
         <number>4</number>
@@ -607,7 +607,7 @@
           <x>0</x>
           <y>0</y>
           <width>256</width>
-          <height>422</height>
+          <height>416</height>
          </rect>
         </property>
         <attribute name="label">
@@ -1152,7 +1152,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>257</width>
+          <width>212</width>
           <height>524</height>
          </rect>
         </property>
@@ -1392,7 +1392,7 @@
           <x>0</x>
           <y>0</y>
           <width>279</width>
-          <height>422</height>
+          <height>327</height>
          </rect>
         </property>
         <attribute name="label">
@@ -1682,8 +1682,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>101</width>
-          <height>422</height>
+          <width>98</width>
+          <height>28</height>
          </rect>
         </property>
         <attribute name="label">
@@ -1830,8 +1830,8 @@ p, li { white-space: pre-wrap; }
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>468</width>
-          <height>422</height>
+          <width>98</width>
+          <height>28</height>
          </rect>
         </property>
         <attribute name="label">
@@ -2029,7 +2029,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="action_About">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/app_icon48.ico</normaloff>:/res/app_icon48.ico</iconset>
    </property>
    <property name="text">
@@ -2038,7 +2038,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="inc_star_mag">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_star_plus.png</normaloff>:/res/ico_star_plus.png</iconset>
    </property>
    <property name="text">
@@ -2050,7 +2050,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="dec_star_mag">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_star_minus.png</normaloff>:/res/ico_star_minus.png</iconset>
    </property>
    <property name="text">
@@ -2065,7 +2065,7 @@ p, li { white-space: pre-wrap; }
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_lock_mag.png</normaloff>:/res/ico_lock_mag.png</iconset>
    </property>
    <property name="text">
@@ -2080,7 +2080,7 @@ p, li { white-space: pre-wrap; }
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_flipx.png</normaloff>:/res/ico_flipx.png</iconset>
    </property>
    <property name="text">
@@ -2095,7 +2095,7 @@ p, li { white-space: pre-wrap; }
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_flipy.png</normaloff>:/res/ico_flipy.png</iconset>
    </property>
    <property name="text">
@@ -2107,7 +2107,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionInc_dso_mag">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_dso_plus.png</normaloff>:/res/ico_dso_plus.png</iconset>
    </property>
    <property name="text">
@@ -2119,7 +2119,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionDec_dso_mag">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_dso_minus.png</normaloff>:/res/ico_dso_minus.png</iconset>
    </property>
    <property name="text">
@@ -2234,7 +2234,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionSet_current_time">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_clock_now.png</normaloff>:/res/ico_clock_now.png</iconset>
    </property>
    <property name="text">
@@ -2324,7 +2324,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionCurLocTime">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_clock_now.png</normaloff>:/res/ico_clock_now.png</iconset>
    </property>
    <property name="text">
@@ -2416,7 +2416,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionSearch">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_search.png</normaloff>:/res/ico_search.png</iconset>
    </property>
    <property name="text">
@@ -2495,7 +2495,7 @@ p, li { white-space: pre-wrap; }
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_auto_grid.png</normaloff>:/res/ico_auto_grid.png</iconset>
    </property>
    <property name="text">
@@ -2510,7 +2510,7 @@ p, li { white-space: pre-wrap; }
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_realtime.png</normaloff>:/res/ico_realtime.png</iconset>
    </property>
    <property name="text">
@@ -2552,7 +2552,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionConnect_device">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_sel_tele.png</normaloff>:/res/ico_sel_tele.png</iconset>
    </property>
    <property name="text">
@@ -2588,7 +2588,7 @@ p, li { white-space: pre-wrap; }
     <bool>false</bool>
    </property>
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_dis_tele.png</normaloff>:/res/ico_dis_tele.png</iconset>
    </property>
    <property name="text">
@@ -2600,7 +2600,7 @@ p, li { white-space: pre-wrap; }
     <bool>false</bool>
    </property>
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_find_tele.png</normaloff>:/res/ico_find_tele.png</iconset>
    </property>
    <property name="text">
@@ -2811,7 +2811,7 @@ p, li { white-space: pre-wrap; }
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_antialias.png</normaloff>:/res/ico_antialias.png</iconset>
    </property>
    <property name="text">
@@ -2829,7 +2829,7 @@ p, li { white-space: pre-wrap; }
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_pln_type.png</normaloff>:/res/ico_pln_type.png</iconset>
    </property>
    <property name="text">
@@ -2856,7 +2856,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionTelescope_FOV">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_find_tele.png</normaloff>:/res/ico_find_tele.png</iconset>
    </property>
    <property name="text">
@@ -2911,7 +2911,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionTelrad">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_telrad.png</normaloff>:/res/ico_telrad.png</iconset>
    </property>
    <property name="text">
@@ -2941,7 +2941,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionFrame_field">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_frame_field.png</normaloff>:/res/ico_frame_field.png</iconset>
    </property>
    <property name="text">
@@ -2988,7 +2988,7 @@ p, li { white-space: pre-wrap; }
     <bool>false</bool>
    </property>
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_stop_tele.png</normaloff>:/res/ico_stop_tele.png</iconset>
    </property>
    <property name="text">
@@ -3021,7 +3021,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionCircle">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_circle.png</normaloff>:/res/ico_circle.png</iconset>
    </property>
    <property name="text">
@@ -3044,7 +3044,7 @@ p, li { white-space: pre-wrap; }
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_bi.png</normaloff>:/res/ico_bi.png</iconset>
    </property>
    <property name="text">
@@ -3069,7 +3069,7 @@ p, li { white-space: pre-wrap; }
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_timelapse.png</normaloff>:/res/ico_timelapse.png</iconset>
    </property>
    <property name="text">
@@ -3101,7 +3101,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionReset_magnitude">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_mag_reset.png</normaloff>:/res/ico_mag_reset.png</iconset>
    </property>
    <property name="text">
@@ -3113,7 +3113,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionTime_Lapse_prefs">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_tool.png</normaloff>:/res/ico_tool.png</iconset>
    </property>
    <property name="text">
@@ -3125,7 +3125,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionShow_help">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/blue-home-icon.png</normaloff>:/res/blue-home-icon.png</iconset>
    </property>
    <property name="text">
@@ -3158,7 +3158,7 @@ p, li { white-space: pre-wrap; }
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_clock.png</normaloff>:/res/ico_clock.png</iconset>
    </property>
    <property name="text">
@@ -3181,7 +3181,7 @@ p, li { white-space: pre-wrap; }
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/res/ico_lock_mag.png</normaloff>:/res/ico_lock_mag.png</iconset>
    </property>
    <property name="text">
@@ -3227,6 +3227,8 @@ p, li { white-space: pre-wrap; }
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
