--- a/csetting.ui
+++ b/csetting.ui
@@ -3612,7 +3612,7 @@
        <x>10</x>
        <y>10</y>
        <width>641</width>
-       <height>91</height>
+       <height>171</height>
       </rect>
      </property>
      <property name="title">
@@ -3655,6 +3655,19 @@
       </property>
       <property name="text">
        <string>Drawing on map</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="checkBox_12">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>80</y>
+        <width>201</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Map position</string>
       </property>
      </widget>
     </widget>
