--- a/cdlgsrchstarname.ui
+++ b/cdlgsrchstarname.ui
@@ -17,10 +17,7 @@
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QComboBox" name="comboBox"/>
-     </item>
-     <item>
-      <widget class="QListWidget" name="listWidget"/>
+      <widget class="CNameMagView" name="treeView"/>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
@@ -57,8 +54,15 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>CNameMagView</class>
+   <extends>QTreeView</extends>
+   <header>cnamemagview.h</header>
+  </customwidget>
+ </customwidgets>
  <tabstops>
-  <tabstop>listWidget</tabstop>
+  <tabstop>treeView</tabstop>
   <tabstop>pushButton</tabstop>
   <tabstop>pushButton_2</tabstop>
  </tabstops>
