--- a/resource.qrc
+++ b/resource.qrc
@@ -46,5 +46,23 @@
         <file>res/ico_clock_now.png</file>
         <file>res/ico_grid_label.png</file>
         <file>res/tip_of_the_day.png</file>
+        <file>res/weather/01d.png</file>
+        <file>res/weather/01n.png</file>
+        <file>res/weather/02d.png</file>
+        <file>res/weather/02n.png</file>
+        <file>res/weather/03d.png</file>
+        <file>res/weather/03n.png</file>
+        <file>res/weather/04d.png</file>
+        <file>res/weather/04n.png</file>
+        <file>res/weather/09d.png</file>
+        <file>res/weather/09n.png</file>
+        <file>res/weather/10d.png</file>
+        <file>res/weather/10n.png</file>
+        <file>res/weather/11d.png</file>
+        <file>res/weather/11n.png</file>
+        <file>res/weather/13d.png</file>
+        <file>res/weather/13n.png</file>
+        <file>res/weather/50d.png</file>
+        <file>res/weather/50n.png</file>
     </qresource>
 </RCC>
