--- a/caddcustomobject.ui
+++ b/caddcustomobject.ui
@@ -83,7 +83,7 @@
        <item>
         <widget class="QPushButton" name="pushButton_2">
          <property name="text">
-          <string>Close</string>
+          <string>OK</string>
          </property>
         </widget>
        </item>
