--- a/cobjinfo.ui
+++ b/cobjinfo.ui
@@ -323,6 +323,19 @@
        </widget>
       </item>
       <item>
+       <spacer name="verticalSpacer_4">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
        <spacer name="verticalSpacer_3">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
@@ -378,6 +391,9 @@
      </item>
      <item row="0" column="0">
       <widget class="QToolButton" name="pushButton">
+       <property name="toolTip">
+        <string>Remove note.</string>
+       </property>
        <property name="text">
         <string>X</string>
        </property>
@@ -397,7 +413,7 @@
       <enum>QTabWidget::Rounded</enum>
      </property>
      <property name="currentIndex">
-      <number>2</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
